fix(encryption): encrypt seed data
